# dvd-fieldfix

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  build_exe.ps1  pyproject.toml  qtgmc-requirements.txt  setup_qtgmc.ps1
.github/workflows/: build-release.yml
docs/: AUTOMATIC_RESTORATION.md  ENCODING_PROFILES.md  TEST_SAMPLES.md
packaging/: cli_entry.py  gui_entry.py
src/dvd_fieldfix/: __init__.py  analysis.py  cli.py  decision_summary.py  gui.py  models.py  preview.py  processing.py  profiles.py  todo.txt  tools.py
tests/: test_analysis.py  test_decision_summary.py  test_gui.py  test_integration_ffmpeg.py  test_models.py  test_processing.py  test_profiles.py
