[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dvd-fieldfix"
version = "0.1.0"
description = "Detecao e correcao conservadora de video entrelacado proveniente de DVD"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "DVD FieldFix"}]
dependencies = []

[project.optional-dependencies]
gui = ["tkinterdnd2>=0.4.3"]
dev = ["pytest>=8", "pytest-cov>=5", "pyinstaller>=6", "tkinterdnd2>=0.4.3"]

[project.scripts]
dvd-fieldfix = "dvd_fieldfix.cli:main"

[project.gui-scripts]
dvd-fieldfix-gui = "dvd_fieldfix.gui:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

